[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "orientation-filter"
description = "Filter particles by stable orientation."
readme = "README.md"
version = "0.1"

requires-python = ">=3.10"
license = {text = "None so far"}
authors = [
  {email = "b.wimmer@bioc.uzh.ch", name = "Benedikt Wimmer"},
]
dependencies = [
    "numpy",
    "pandas",
    "starfile",
    "scipy",
    "seaborn"
]

[tool.setuptools]
packages = ["orientation-filter"]

[project.scripts]
orientation-filter = "orientation_filter:cli"

[project.urls]
homepage = "https://github.com/bwmr/orientation-filter"
repository = "https://github.com/bwmr/orientation-filter"

[tool.ruff]
# partially copied from github.com/teamtomo/membrain-seg
line-length = 88
target-version = "py310"
extend-select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "U",    # pyupgrade
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "C901", # Function too complex -> noted as TODO in code
    "RUF005", # Interferes with subprocess.run,
    "RUF015", # Prefer next(iter) over iter[0] 
    "B012", # We use try/ finally a lot to avoid raising exceptions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
